fix bug where return home icon not aligned with text

--- a/project-assets/css/style.css
+++ b/project-assets/css/style.css
@@ -85,7 +85,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
-    justify-content:center;
+    justify-content: center;
 }
 
 
@@ -145,6 +145,12 @@ body {
     transform: translateY(15vh);
     width: 100%;
     text-align: center;
+}
+
+.return-home-wrapper span::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f015";
 }
 
 .return-home {
